--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media">
                     <div class="card-img pr-2">
-                        <span class="mbr-iconfont mbri-briefcase" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                    </div>
+                      <a href="https://hrc.com.vn/viec-lam">   <span class="mbr-iconfont mbri-briefcase" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
+                    </div></a>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Việc làm
 </h4>
@@ -257,8 +257,8 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media">
                     <div class="card-img pr-2">
-                        <span class="mbr-iconfont mbri-features" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                    </div>
+                      <a href="https://hrc.com.vn/ky-nang">   <span class="mbr-iconfont mbri-features" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
+                    </div></a>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Kỹ năng
 </h4>
