--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
                 <div class="media">
                     <div class="card-img pr-2">
                       <a href="https://hrc.com.vn/viec-lam">   <span class="mbr-iconfont mbri-briefcase" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                    </div></a>
+                    </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Việc làm
-</h4>
+</h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">1000+ công việc được chia thành các Joblist, liên tục cập nhật và được lựa chọn dành riêng cho bạn!</p>
                     </div>
                 </div>
@@ -258,10 +258,10 @@
                 <div class="media">
                     <div class="card-img pr-2">
                       <a href="https://hrc.com.vn/ky-nang">   <span class="mbr-iconfont mbri-features" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
-                    </div></a>
+                    </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Kỹ năng
-</h4>
+</h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Trọn bộ kiến thức ngành nghề và toolkits kỹ năng tuyển dụng, bộ sample CV từng ngành giúp bạn chinh phục công việc mơ ước!
                         </p>
@@ -272,11 +272,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="media">
                     <div class="card-img pr-2">
-                      <a href="#form1-e">  <span class="mbr-iconfont mbri-edit" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span></a>
+                      <a href="#form1-e">  <span class="mbr-iconfont mbri-edit" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                     </div>
                     <div class="media-body card-box">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Tạp chí Tuyển dụng #4
-</h4>
+</h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">TCTD#4: "Hiểu đúng nghề, tìm đúng việc" cung cấp trọn bộ bí kíp tìm việc phù hợp, giúp bạn công phá mọi kỳ thực tập hè này!</p>
                     </div>
                 </div>
